# Starbase

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindChipmunk.cmake  FindFreetype.cmake  FindTurboBadger.cmake
data/models/bullets/bullet-0/: bullet-0.yml
data/models/planets/simple/: simple.yml
data/models/ships/interceptor-0/: interceptor-0.yml
data/shaders/: path.f.glsl  path.v.glsl  postproc.f.glsl  postproc.v.glsl  simple.f.glsl  simple.v.glsl
data/ui/layout/: info.tb.txt  startmenu.tb.txt
data/ui/skin/: skin.tb.txt
data/ui/starbase_skin/: skin.tb.txt  window-Recovered.psd  window.psd  window_close.psd
extlibs/nanosvg/: nanosvg.h
extra/: vmware.supp
include/starbase/: gl.hpp  optional.hpp  starbase.hpp  windows.hpp
include/starbase/cgame/: cgame.hpp  display.hpp  fwd.hpp
include/starbase/cgame/component/: renderable.hpp
include/starbase/cgame/renderer/: camera.hpp  entityrenderer.hpp  glhelpers.hpp  irenderer.hpp  renderer.hpp  renderer_gl2.hpp  renderparams.hpp  shader.hpp
include/starbase/cgame/resource/: model.hpp
include/starbase/cgame/ui/: mainwindow.hpp  startmenu.hpp  window.hpp
include/starbase/cgame/ui/renderer/: tb_renderer_gl.hpp
include/starbase/game/: chipmunk_safe.hpp  fwd.hpp  game.hpp  id.hpp  logging.hpp
include/starbase/game/component/: autodestruct.hpp  body.hpp  physics.hpp  shipcontrols.hpp  transform.hpp
include/starbase/game/entity/: component_list.hpp  em.hpp  entity.hpp  entitymanager.hpp  event_list.hpp  eventmanager.hpp
include/starbase/game/entity/detail/: component_index.inl  handle.hpp  tmp.hpp
include/starbase/game/entity/template/: component_list.hpp  entity.hpp  entitymanager.hpp  event_list.hpp  eventmanager.hpp  tcomponent_list.hpp  tentity.hpp  tentitymanager.hpp
include/starbase/game/entity/template/detail/: entity.inl  entitymanager.inl  tmp.hpp
include/starbase/game/fs/: filesystem_physfs.hpp  ifilesystem.hpp
include/starbase/game/resource/: body.hpp  iresource.hpp  resource_ptr.hpp  resourceloader.hpp  text.hpp
include/starbase/game/resource/detail/: casteljau.hpp  model_common.hpp  resourceloader.inl
include/starbase/game/system/: autodestruct_system.hpp  physics_system.hpp  shipcontrols_system.hpp
src/cgame/: cgame.cpp  display.cpp
src/cgame/renderer/: camera.cpp  entityrenderer.cpp  glhelpers.cpp  renderer.cpp  renderer_gl2.cpp  shader.cpp
src/cgame/resource/: model.cpp
src/cgame/ui/: mainwindow.cpp  startmenu.cpp  window.cpp
src/cgame/ui/tb/: tb_file_physfs.cpp  tb_renderer_gl.cpp
src/client/: main.cpp
src/game/: game.cpp  id.cpp  logging.cpp
src/game/entity/: entity.cpp
src/game/fs/: filesystem_physfs.cpp
src/game/resource/: body.cpp  text.cpp
src/game/resource/detail/: casteljau.cpp  model_common.cpp
src/game/system/: autodestruct_system.cpp  physics_system.cpp  shipcontrols_system.cpp
src/server/: main.cpp
src/support/: support.cpp
